--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 # command line args
-addopts = -s --html=./Report/day06.html
+addopts = -s --alluredir Report
 # search path
 testpaths = ./Scripts
 # search file
